https setup on front and back

--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "rootDirs": ["./src"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -20,6 +21,4 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
 }
