--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -8,18 +8,13 @@ jobs:
 
     if: github.ref_name == 'main'
 
-    strategy:
-      matrix:
-        node-version: [12.x]
-
     steps:
-      - name: Checkout code
       - uses: actions/checkout@v3
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - name: Use Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: "18"
 
       - name: Git pull
         run: git pull origin main
