--- a/.github/workflows/deployProd.yml
+++ b/.github/workflows/deployProd.yml
@@ -14,6 +14,8 @@ jobs:
 
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          clean: "false"
 
       - name: Move .env file back
         run: mv ../.env .
