--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,8 +22,11 @@ jobs:
         run: npm run build
         working-directory: ./back
 
-  test-back:
-    needs: build-back
+      - name: Run tests
+        run: npm run test
+        working-directory: ./back
+
+  build-front:
     runs-on: ubuntu-latest
 
     steps:
@@ -36,8 +39,12 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-        working-directory: ./back
+        working-directory: ./front
+
+      - name: Build
+        run: npm run build
+        working-directory: ./front
 
       - name: Run tests
         run: npm run test
-        working-directory: ./back
+        working-directory: ./front
