--- a/back/package.json
+++ b/back/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^20.4.1",
     "concurrently": "^8.0.1",
     "jest": "^29.6.1",
+    "jest-mock-express": "^0.1.1",
     "nodemon": "^2.0.22",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
