--- a/front/package.json
+++ b/front/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.10",
+    "@react-navigation/native": "^5.7.3",
     "@stitches/react": "^1.2.8",
-    "jest": "^29.6.1",
     "dotenv": "^16.3.1",
+    "history": "^5.3.0",
+    "jest": "^29.6.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
