--- a/back/package.json
+++ b/back/package.json
@@ -40,6 +40,7 @@
         "jsonwebtoken": "^9.0.0",
         "mongodb": "^5.7.0",
         "mongoose": "^7.3.4",
+        "socket.io": "^4.7.2",
         "yup": "^1.2.0"
     }
 }
