--- a/back/package.json
+++ b/back/package.json
@@ -22,6 +22,7 @@
         "@types/node": "^20.4.1",
         "@types/supertest": "^2.0.12",
         "concurrently": "^8.0.1",
+        "ioredis-mock": "^8.8.1",
         "jest": "^29.6.1",
         "jest-mock-express": "^0.1.1",
         "mongodb-memory-server": "^8.14.0",
