--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,8 @@ jobs:
         working-directory: ./back
 
       - name: Run tests
+        env:
+          JWTSECRET: test-secret
         run: npm run test
         working-directory: ./back
 
