--- a/back/package.json
+++ b/back/package.json
@@ -19,6 +19,7 @@
         "@types/ioredis": "^5.0.0",
         "@types/jest": "^29.5.3",
         "@types/jsonwebtoken": "^9.0.2",
+        "@types/multer": "^1.4.7",
         "@types/node": "^20.4.1",
         "@types/supertest": "^2.0.12",
         "concurrently": "^8.0.1",
@@ -44,6 +45,7 @@
         "jsonwebtoken": "^9.0.0",
         "mongodb": "^5.7.0",
         "mongoose": "^7.3.4",
+        "multer": "^1.4.5-lts.1",
         "socket.io": "^4.7.2",
         "yup": "^1.2.0"
     }
