--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     links:
       - mongo
       - redis
+    volumes:                
+      - uploads_data:/uploads
   mongo:
     image: mongo
     volumes:
@@ -28,3 +30,4 @@ services:
 volumes:
   mongo_data:
   redis_data:
+  uploads_data: 
