--- a/front/package.json
+++ b/front/package.json
@@ -19,7 +19,8 @@
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "uuidv4": "^5.0.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.3",
