--- a/front/package.json
+++ b/front/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-  "dependencies":{
+  "dependencies": {
     "@phosphor-icons/react": "^2.0.10",
     "@react-navigation/native": "^5.7.3",
     "@stitches/react": "^1.2.8",
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
+    "socket.io-client": "^4.7.2",
     "uuidv4": "^5.0.1"
   },
   "devDependencies": {
