--- a/front/package.json
+++ b/front/package.json
@@ -28,12 +28,15 @@
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/socket.io-client": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "@vitejs/plugin-react": "^4.0.1",
     "eslint": "^8.44.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
+    "install": "^0.13.0",
+    "npm": "^9.8.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.0"
   }
