--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.5",
     "@phosphor-icons/react": "^2.0.10",
     "@react-navigation/native": "^5.7.3",
     "@stitches/react": "^1.2.8",
