remove dev certificates

--- a/.github/workflows/deployProd.yml
+++ b/.github/workflows/deployProd.yml
@@ -32,11 +32,11 @@ jobs:
 
       - name: Create .key file
         run: |
-          echo ${{ secrets.CERT_KEY }} >> ./back/localhost.key
+          echo ${{ secrets.CERT_KEY }} > ./back/localhost.key
 
       - name: Create .crt file
         run: |
-          echo ${{ secrets.CERT_CRT }} >> ./back/localhost.crt
+          echo ${{ secrets.CERT_CRT }} > ./back/localhost.crt
   
       - name: Run Docker Compose up
         run: docker-compose up --build -d
