remove dev certificates

--- a/.github/workflows/deployProd.yml
+++ b/.github/workflows/deployProd.yml
@@ -32,13 +32,13 @@ jobs:
 
       - name: Create .key file
         run: |
-          echo ${{ secrets.CERT_KEY }} > ./back/localhost.key
-        shell: /usr/bin/bash -e {0}
+          echo "${{ secrets.CERT_KEY }}" > ./back/localhost.key
+        shell: bash
 
       - name: Create .crt file
         run: |
-          echo ${{ secrets.CERT_CRT }} > ./back/localhost.crt
-        shell: /usr/bin/bash -e {0}
+          echo "${{ secrets.CERT_CRT }}" > ./back/localhost.crt
+        shell: bash
   
       - name: Run Docker Compose up
         run: docker-compose up --build -d
