--- a/back/package.json
+++ b/back/package.json
@@ -21,6 +21,7 @@
         "@types/jsonwebtoken": "^9.0.2",
         "@types/multer": "^1.4.7",
         "@types/node": "^20.4.1",
+        "@types/node-cron": "^3.0.8",
         "@types/supertest": "^2.0.12",
         "concurrently": "^8.0.1",
         "ioredis-mock": "^8.8.1",
@@ -45,12 +46,10 @@
         "jsonwebtoken": "^9.0.0",
         "mongodb": "^5.7.0",
         "mongoose": "^7.3.4",
-
         "multer": "^1.4.5-lts.1",
-
+        "node-cron": "^3.0.2",
         "saslprep": "^1.0.3",
-
-        "socket.io": "^4.7.2", 
+        "socket.io": "^4.7.2",
         "yup": "^1.2.0"
     }
 }
