--- a/front/package.json
+++ b/front/package.json
@@ -18,10 +18,12 @@
     "@phosphor-icons/react": "^2.0.10",
     "@react-navigation/native": "^5.7.3",
     "@stitches/react": "^1.2.8",
+    "apexcharts": "^3.41.1",
     "dotenv": "^16.3.1",
     "jest": "^29.6.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "socket.io-client": "^4.7.2",
